fix: PromotionOptionCouponGroupRepository에서 findByPromotionOptionId가 PromotionOptionCouponGroup을 List로 반환할 수 있어 이에따라 코드 수정